# neuralpdr

./: README.md  all_run_trends.py  pyproject.toml  requirements.txt  requirements_explicit.txt
configs/: config.yaml  mlps_model_1.yaml  mlps_model_2.yaml  mlps_model_3.yaml  mlps_model_4.yaml  mlps_model_a.yaml  mlps_model_b.yaml  mlps_model_c.yaml  mlps_model_d.yaml  mlps_model_e.yaml  mlps_model_f.yaml  mlps_model_linear.yaml
scripts/: grid_generator.py  model_linear_mlps.sh  models_to_h5.py  run_inference.sh  run_mlps_models.sh  run_ray_tune.sh  train_model.sh
src/neuralpdr/: callbacks.py  data.py  inference.py  model.py  plot.py  train.py
src/neuralpdr/viz/: plot_figures.py  trend_plots.py  visualize.py  visualize_features.py
